--- a/contact.css
+++ b/contact.css
@@ -1,136 +1,142 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-body{
-    background: white;
+body {
+  background: white;
 }
 
-#Sh-alignCont{
-    height: 20vh;
-    width: 100%;
-    display: flex;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-  }
-  nav{
-    height: 100%;
-    width: 80%;
-    display: flex;
-    letter-spacing: 1px;
-  }
-  nav > div{
-    height: 100%;
-  }
-  #Sh-logoCont{
-    width: 15%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    box-sizing: border-box;
-  }
-  #Sh-logoCont > a > img{
-    width: 60%;
-    height: 100%;
-  
-  }
-  #Sh-pageLinksCont{
-    width: 65%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5%;
-  }
-  #Sh-pageLinksCont > a{
-    text-decoration: none;
-    color: white;
-    font-family: Poppins;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  #Sh-navBtnCont{
-    width: 20%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 8%;
-  }
-  #Sh-navBtnCont > button{
-    padding: 5%;
-    font-size: 18px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    border-radius: 30px;
-    cursor: pointer;
-  }
-  #Sh-logInBtn{
-    background: none;
-    color: white;
-    border: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
-  #Sh-signInBtn{
-    background-color: rgb(252, 101, 54);
-    border: none;
-    color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
-  #Sh-logInBtn:hover{
-    background-color: rgb(252, 101, 54);
-    color: white;
-  }
-  #Sh-signInBtn:hover{
-    background: white;
-    color: rgb(252, 101, 54);
-  }
-  /* /////////////////////////dropdown menu CSS////////////////////////////////// */
-  
-  .dropdown {
-    position: relative;
-    margin-top: 4.5%;
-    display: none;
-  }
-  
-  /* Style for the dropdown button */
-  .dropdown-btn {
-    background-color: rgb(44, 25, 25);
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Style for the dropdown content */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(252, 101, 54);
-    min-width: 16vh;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-  
-  /* Style for the dropdown items */
-  .dropdown-item {
-    padding: 12px 16px;
-    display: block;
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  /* Change color on hover */
-  .dropdown-item:hover {
-    background-color: black;
-  }
+#Sh-alignCont {
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+}
+nav {
+  height: 100%;
+  width: 80%;
+  display: flex;
+  letter-spacing: 1px;
+}
+nav > div {
+  height: 100%;
+}
+#Sh-logoCont {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+}
+#Sh-logoCont > a > img {
+  width: 60%;
+  height: 100%;
+}
+#Sh-pageLinksCont {
+  width: 65%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+#Sh-pageLinksCont > a {
+  text-decoration: none;
+  color: white;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+}
+#Sh-navBtnCont {
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 8%;
+}
+#Sh-navBtnCont > button {
+  padding: 5%;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-radius: 30px;
+  cursor: pointer;
+}
+#Sh-logInBtn {
+  background: none;
+  color: white;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#Sh-signInBtn {
+  background-color: rgb(252, 101, 54);
+  border: none;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#Sh-logInBtn:hover {
+  background-color: rgb(252, 101, 54);
+  color: white;
+}
+#Sh-signInBtn:hover {
+  background: white;
+  color: rgb(252, 101, 54);
+}
+a:hover {
+  color: rgb(252, 101, 54);
+}
+
+#NpageLinksCont > a:hover {
+  color: rgb(252, 101, 54);
+}
+/* /////////////////////////dropdown menu CSS////////////////////////////////// */
+
+.dropdown {
+  position: relative;
+  margin-top: 4.5%;
+  display: none;
+}
+
+/* Style for the dropdown button */
+.dropdown-btn {
+  background-color: rgb(44, 25, 25);
+  border: none;
+  cursor: pointer;
+}
+
+/* Style for the dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(252, 101, 54);
+  min-width: 16vh;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Style for the dropdown items */
+.dropdown-item {
+  padding: 12px 16px;
+  display: block;
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+/* Change color on hover */
+.dropdown-item:hover {
+  background-color: black;
+}
 /* --------------------contact middle body------------------------------- */
 
-#alignContainer{
+#alignContainer {
   width: 100%;
   height: fit-content;
   display: flex;
@@ -138,191 +144,163 @@ body{
   align-items: center;
 }
 
-.contactUs_49{
-    position: relative;
-    width: 95%;
-    padding: 40px 100px;
+.contactUs_49 {
+  position: relative;
+  width: 95%;
+  padding: 40px 100px;
 }
-.contactUs_49 .title_49
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
+.contactUs_49 .title_49 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
 }
-.contactUs_49 .title_49 h2{
-    color: black;
-    font-weight: 500;
+.contactUs_49 .title_49 h2 {
+  color: black;
+  font-weight: 500;
 }
-.form
-{
-    width: 100%;
-    grid-area: form;
-
+.form {
+  width: 100%;
+  grid-area: form;
 }
-.info
-{
-    grid-area: info;
+.info {
+  grid-area: info;
 }
-.map
-{   
-    grid-area: map;
+.map {
+  grid-area: map;
 }
-.contact{
-    padding: 40px;
-    background:  white;
-    box-shadow: 0 5px 35px rgba(0,0,0,0.15);
-    border-radius: 20px;
+.contact {
+  padding: 40px;
+  background: white;
+  box-shadow: 0 5px 35px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
 }
-.box_49
-{
-    position: relative;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 5fr 4fr;
-    grid-template-areas: 
+.box_49 {
+  position: relative;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 5fr 4fr;
+  grid-template-areas:
     "form info"
     "form map";
-    grid-gap: 20px;
-    margin-top: 20px;
+  grid-gap: 20px;
+  margin-top: 20px;
 }
-.contact h3 
-{
-    color: rgb(252, 101, 52);
-    font-weight: 500;
-    font-size: 1.4em;
-    margin-bottom: 10px;
+.contact h3 {
+  color: rgb(252, 101, 52);
+  font-weight: 500;
+  font-size: 1.4em;
+  margin-bottom: 10px;
 }
 /* form */
-.formBox49{
-    position: relative;
-    width: 80%;
+.formBox49 {
+  position: relative;
+  width: 80%;
 }
-.formBox49 .row50 
-{
-    display: flex;
-    gap: 20px;
+.formBox49 .row50 {
+  display: flex;
+  gap: 20px;
 }
 
-.inputBox49
-{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    width: 50%;
+.inputBox49 {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  width: 50%;
 }
 .formBox49 .row100 .inputBox49 {
-    width: 100%;
+  width: 100%;
 }
-.inputBox49 span 
-{
-    color: black;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    font-weight: 500;
+.inputBox49 span {
+  color: black;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-weight: 500;
 }
-.inputBox49 input
-{
-    padding: 10px;
-    font-size: 1.1em;
-    outline: none;
-    border: 1px solid #333;
-    border-radius: 10px;
+.inputBox49 input {
+  padding: 10px;
+  font-size: 1.1em;
+  outline: none;
+  border: 1px solid #333;
+  border-radius: 10px;
 }
-.inputBox49 textarea
-{
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 1.1em;
-    outline: none;
-    border: 1px solid #333;
-    resize: none;
-    min-height: 220px;
-    margin-bottom: 10px;
+.inputBox49 textarea {
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 1.1em;
+  outline: none;
+  border: 1px solid #333;
+  resize: none;
+  min-height: 220px;
+  margin-bottom: 10px;
 }
-.inputBox49 input[type="submit"]
-{
-    background: rgb(252, 101, 52);
-    color: white;
-    border: none;
-    font-size: 1.1em;
-    font-weight: 500;
-    cursor: pointer;
-    padding: 14px 15px;
+.inputBox49 input[type="submit"] {
+  background: rgb(252, 101, 52);
+  color: white;
+  border: none;
+  font-size: 1.1em;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 14px 15px;
 }
-.inputBox49 ::placeholder
-{
-    color: rgb(159, 156, 156);
+.inputBox49 ::placeholder {
+  color: rgb(159, 156, 156);
 }
 /* info*/
-.info
-{
-    background: rgb(255, 210, 195);
+.info {
+  background: rgb(255, 210, 195);
 }
-.info h3
-{
-    color: black;
-
+.info h3 {
+  color: black;
 }
-.info .infoBox49 div
-{
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-
+.info .infoBox49 div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
-.info .infoBox49 span
-{
-    min-width:40px;
-    height: 40px;
-    color:#333;
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5em;
-    border-radius: 50%;
-    margin-right: 15px;
+.info .infoBox49 span {
+  min-width: 40px;
+  height: 40px;
+  color: #333;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+  border-radius: 50%;
+  margin-right: 15px;
 }
-.info .infoBox49 div p 
-{
-    color: rgb(159,156,156);
-    font-size: 1.1em;
+.info .infoBox49 div p {
+  color: rgb(159, 156, 156);
+  font-size: 1.1em;
 }
-.info .infoBox49 div a
-{
-    color: #333;
-    text-decoration: none;
-    font-size: 1.1em;
+.info .infoBox49 div a {
+  color: #333;
+  text-decoration: none;
+  font-size: 1.1em;
 }
-.Social49
-{
-    margin-top: 40px;
-    display: flex;
+.Social49 {
+  margin-top: 40px;
+  display: flex;
 }
-.Social49 li
-{
-    list-style: none;
-    margin-right: 15px;
+.Social49 li {
+  list-style: none;
+  margin-right: 15px;
 }
-.Social49 li a
-{
-    color: #333;
-    font-size: 2em;
-    color: #333;
+.Social49 li a {
+  color: #333;
+  font-size: 2em;
+  color: #333;
 }
-.map
-{
-    padding: 0;
-
+.map {
+  padding: 0;
 }
-.map iframe
-{
+.map iframe {
   width: 100%;
   border-radius: 20px;
-  height: 100%;  
+  height: 100%;
 }
-  
+
 /* footer Styling */
 .Nafter-mid-container {
   display: flex;
@@ -480,72 +458,72 @@ body{
   font-family: Poppins;
 }
 
-
 @media (max-width: 767px) {
   .box_49 {
-      grid-template-columns: 1fr; 
-      grid-template-areas:
-          "form"
-          "info"
-          "map";
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "form"
+      "info"
+      "map";
   }
 
   .form,
   .info,
   .map {
-      width: 100%; 
+    width: 100%;
   }
 
   .formBox49 .row50,
   .formBox49 .row100 .inputBox49 {
-      flex-direction: column; 
+    flex-direction: column;
   }
 
   .inputBox49 {
-      width: 100%;
-      margin-bottom: 10px; 
+    width: 100%;
+    margin-bottom: 10px;
   }
 
   .formBox49 .row50 .inputBox49,
   .formBox49 .row100 .inputBox49 {
-      width: 100%; 
+    width: 100%;
   }
 
   .info,
   .map {
-      padding: 20px; 
+    padding: 20px;
   }
 }
 
 /* ------------------------For-Responsiveness-Queries--------------------------- */
 
-@media screen and (min-width: 450px) and (max-width: 675px){
-  #Sh-alignCont{
-      height: 15vh;
+@media screen and (min-width: 450px) and (max-width: 675px) {
+  #Sh-alignCont {
+    height: 15vh;
   }
-  nav{
-      width: 90%;
+  nav {
+    width: 90%;
   }
-  #Sh-logoCont > a > img{
-      width: 100%;
+  #Sh-logoCont > a > img {
+    width: 100%;
   }
-  #Sh-pageLinksCont, #Sh-navBtnCont{
-      display: none;
+  #Sh-pageLinksCont,
+  #Sh-navBtnCont {
+    display: none;
   }
   /* /////////////////////////dropdown menu CSS////////////////////////////////// */
 
-  .dropdown{
-      width: 85%;
-      margin-top: 0;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-  } 
+  .dropdown {
+    width: 85%;
+    margin-top: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 
   .show {
-      display: block; /* Use !important to override inline styles */
-      top: 10vh;
-      position: absolute;
+    display: block; /* Use !important to override inline styles */
+    top: 10vh;
+    position: absolute;
   }
 
   /* membership container medie queries*/
@@ -554,7 +532,7 @@ body{
   }
   .Njoin-membership {
     width: 90%;
-  }  
+  }
   .Njoin-membership p {
     font-size: 150%;
   }
@@ -566,39 +544,39 @@ body{
     width: 100%;
   }
 
-/* footer css -----------------------------------------*/
+  /* footer css -----------------------------------------*/
 
-    .Nabout-Footer {
-      height: 40vh;
-    }
-    
-    .Ncontent-Footer {
-      height: 90%;
-      width: 90%;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2%;
-    }
-    .Ncontent-Footer > div {
-      margin-top: 0;
-      padding-top: 5%;
-      letter-spacing: 1px;
-    }
-    
-    .Ncontent-Footer > :nth-child(2),
-    .Ncontent-Footer > :nth-child(3) {
-      margin-left: 0;
-    }
-    
-    .Ncontent-Footer > :nth-child(4) {
-      margin-left: 0;
-    }
-    #Nline-footer {
-      width: 90%;
-    }
-    .Nafter-line {
-      width: 90%;
-    }
-    .Nfooter-Grey2 {
-      font-size: 15px;
-    }
+  .Nabout-Footer {
+    height: 40vh;
+  }
+
+  .Ncontent-Footer {
+    height: 90%;
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+  }
+  .Ncontent-Footer > div {
+    margin-top: 0;
+    padding-top: 5%;
+    letter-spacing: 1px;
+  }
+
+  .Ncontent-Footer > :nth-child(2),
+  .Ncontent-Footer > :nth-child(3) {
+    margin-left: 0;
+  }
+
+  .Ncontent-Footer > :nth-child(4) {
+    margin-left: 0;
+  }
+  #Nline-footer {
+    width: 90%;
+  }
+  .Nafter-line {
+    width: 90%;
+  }
+  .Nfooter-Grey2 {
+    font-size: 15px;
+  }
 }
