--- a/Home.css
+++ b/Home.css
@@ -309,6 +309,120 @@ nav > div{
     font-size: 300%;
     letter-spacing: 1px;
 }
+/* ///////////////////////////package container CSS/////////////////////////////// */
+#placesOuterContainer{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background-color: rgb(102, 89, 89);
+}
+
+#placesCont{
+    top: 0%;
+    left: 10%;
+    position: fixed;
+    width: 80%;
+    height: 90%;
+    padding: 2% 0;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 2%;
+}
+#buttonCont{
+    width: 80%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 90%;
+    left: 10%;
+    position: fixed;
+}
+#buttonCont > button{
+    background-color:  rgb(230, 69, 20);
+    color: white;
+    cursor: pointer;
+    padding: 2%;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+#buttonCont > button:hover{
+    background-color: white;
+    border: 2px solid  rgb(252, 101, 54);
+    color:  rgb(252, 101, 54);
+}
+
+.placeCard{
+    background-color: black;
+    color: white;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.imgCont{
+    width: 100%;
+    height: 30%;
+}
+.imgCont > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.placeDetailCont{
+    height: 47%;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    box-sizing: border-box;
+    padding: 0 1%;
+}
+.placeDetailCont > p{
+    font-size: smaller;
+}
+.priceAndBtnCont, .timeAndDateCont{
+    width: 100%;
+    height: 10%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.timeAndDateCont > div{
+    text-align: center;
+    color: orangered;
+    font-size: small;
+}
+.priceAndBtnCont > div{
+    font-size: 20px;
+    text-align: center;
+}
+.priceAndBtnCont > div > button{
+    padding: 5% 3%;
+    cursor: pointer;
+    color:white;
+    background-color: rgb(17, 17, 88); 
+    border : none;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
+  .priceAndBtnCont > div > button:hover{
+    color: rgb(17, 17, 88);
+    background-color: white;
+    border: 2px solid rgb(17, 17, 88);
+  }
+
+
+
 
 /* ------------------partner Section---------------- */
 
@@ -472,6 +586,7 @@ nav > div{
 /* --------------price heading-------------------- */
 
 #Sh-overlap2ndCont{
+    display: block;
     top: 360vh;
     position: absolute;
     height: 30vh;
@@ -492,25 +607,31 @@ nav > div{
 /* --------------------data wrapper styling-------------------------- */
 #Sh-alignCont9{
     width: 100%;
-    height: 220vh;
+    height: 1520px;
+    /* border: 1px solid black; */
     display: flex;
+    box-sizing: border-box;
     justify-content: center;
 }
 #data-Button-cont{
     width: 80%;
     height: fit-content;
     display: flex;
+    box-sizing: border-box;
+    /* border: 5px solid blue; */
     flex-direction: column;
     align-items: center;
 }
 #Sh-data-main-container1{
     width: 100%;
-    padding: 6% 0;
-    height:fit-content;
+    padding: 5% 0;
+    height: 1300px;
+    /* border: 1px solid green; */
     display:grid;
+    box-sizing: border-box;
     grid-template-columns:repeat(3, 1fr);
     grid-template-rows:auto;
-    gap:4%;
+    gap: 40px;
     justify-content: center; 
     margin: auto;
 }
@@ -578,11 +699,12 @@ nav > div{
   }
 
   #btnContainer{
-    height: 30vh;
+    height: 220px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    /* border: 1px solid red; */
   }
 
   #seeMoreCardBtn{
@@ -613,6 +735,7 @@ nav > div{
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5); 
       }
+
   .popup {
       display: none;
       position: fixed;
