--- a/payment.css
+++ b/payment.css
@@ -1,17 +1,19 @@
-*{
+* {
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   margin: 0;
   padding: 0;
 }
-.box{
+
+.box {
   height: 500px;
   width: 500px;
   border: 2px solid red;
 }
 
-header{
+header {
   width: 100%;
   height: 20vh;
   /* background-image: url("https://cdn.pixabay.com/photo/2018/08/16/08/39/hallstatt-3609863_1280.jpg");
@@ -19,7 +21,8 @@ header{
   background-size: cover; */
   background-color: black;
 }
-#Sh-fadeCont{
+
+#Sh-fadeCont {
   background-color: rgb(71, 47, 37);
   width: 100%;
   height: 100%;
@@ -27,24 +30,31 @@ header{
 }
 
 
-#Sh-alignCont{
+#Sh-alignCont {
   height: 20vh;
   width: 100%;
   display: flex;
   background-color: black;
   justify-content: center;
   align-items: center;
+  /* position: fixed;
+  top: 0; */
+
+  
 }
-nav{
+
+nav {
   height: 100%;
   width: 80%;
   display: flex;
   letter-spacing: 1px;
 }
-nav > div{
+
+nav>div {
   height: 100%;
 }
-#Sh-logoCont{
+
+#Sh-logoCont {
   width: 15%;
   height: 100%;
   display: flex;
@@ -52,33 +62,38 @@ nav > div{
   align-items: center;
   box-sizing: border-box;
 }
-#Sh-logoCont > a > img{
+
+#Sh-logoCont>a>img {
   width: 60%;
   height: 100%;
 
 }
-#Sh-pageLinksCont{
+
+#Sh-pageLinksCont {
   width: 65%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 5%;
 }
-#Sh-pageLinksCont > a{
+
+#Sh-pageLinksCont>a {
   text-decoration: none;
   color: white;
   font-family: Poppins;
   font-size: 18px;
   font-weight: 600;
 }
-#Sh-navBtnCont{
+
+#Sh-navBtnCont {
   width: 20%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   gap: 8%;
 }
-#Sh-navBtnCont > button{
+
+#Sh-navBtnCont>button {
   padding: 5%;
   font-size: 18px;
   font-weight: 600;
@@ -86,26 +101,31 @@ nav > div{
   border-radius: 30px;
   cursor: pointer;
 }
-#Sh-logInBtn{
+
+#Sh-logInBtn {
   background: none;
   color: white;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-#Sh-signInBtn{
+
+#Sh-signInBtn {
   background-color: rgb(252, 101, 54);
   border: none;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-#Sh-logInBtn:hover{
+
+#Sh-logInBtn:hover {
   background-color: rgb(252, 101, 54);
   color: white;
 }
-#Sh-signInBtn:hover{
+
+#Sh-signInBtn:hover {
   background: white;
   color: rgb(252, 101, 54);
 }
+
 /* /////////////////////////dropdown menu CSS////////////////////////////////// */
 
 .dropdown {
@@ -146,74 +166,146 @@ nav > div{
 .dropdown-item:hover {
   background-color: black;
 }
+
 /*  ============================================= */
 
 /* single card  csss  */
 
 
-.continentcard{
- /* border: 2px solid red; */
- width: 350px;
- /* text-align: center; */
-border-radius: 25px;
-height: 400px;
-margin: 50px 50px;
-background-color: rgb(227, 255, 245);
-box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+.continentcard {
+  /* border: 2px solid red; */
+  width: 350px;
+  /* text-align: center; */
+  border-radius: 25px;
+  height: 400px;
+  margin: 50px 0px;
+  background-color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color:rgb(255, 249, 249) ;
 }
-.continentimg{
-  width:100%;
-  height:60%;
-border-top-right-radius: 25px;
-border-top-left-radius: 25px;
 
+.overview {
+  width: 350px;
+  border-radius: 25px;
+  margin: 50px 0px;
+  background-color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 15px;
+  background-color:rgb(255, 249, 249) ;
+}
+
+.overview:hover {
+  transform: scale(1.05);
+  transition: all 0.4s linear;
+}
+
+.overview-word {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 54px;
+  color: #000000;
+  display: block;
+  line-height: 60px;
+  
+}
+
+.overviewcontent {
+  font-size: 20px;
+  margin: 0px;
+}
+
+.continentcard:hover {
+  transform: scale(1.05);
+  transition: all 0.4s linear;
+}
+/* .continentcard:hover .continentname{
+  font-size: 30px;
+
+  transition: all 1s linear;
+} */
+
+.continentimg {
+  width: 100%;
+  height: 60%;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
-.continentname{
+
+#siglecard {
+  margin: 40px auto 0px auto;
+  display: block;
+  width: 80%;
+  display: flex;
+  /* border: 2px solid red; */
+  justify-content: space-around;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* position: relative;
+  top: 70px;
+  left: 0px;
+  z-index: -1; */
+}
+
+.continentname {
   text-align: center;
   margin-bottom: 10px;
   margin-top: 0px;
 }
 
-.buttonconfrom{
-  padding: 10px;
+.buttonconfrom {
   border-radius: 10px;
   display: block;
   text-align: center;
- margin: auto;
- background-color: rgb(55, 88, 255);
- font-weight: bold;
-color: white;
+  margin: auto;
+  /* font-weight: bold; */
+  color: white;
+  background-color: rgb(17, 17, 88);
+  padding: 9px;
+  border: 1px solid rgb(17, 17, 88);
+  border-radius: 10px;
+  cursor: pointer;
+
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
 }
 
-.date{
+.buttonconfrom:hover {
+  background-color: white;
+  color: black;
+}
+
+.date {
   position: relative;
   top: 0px;
-  right: -10px;
+  right: -25px;
   /* left: 190px; */
   /* margin: 0px; */
 
   margin: 0px;
 }
 
-.price{
- text-align: center;
- position: relative;
- top: -25px;
- left: 80px;
- margin: 0px;
+.price {
+  text-align: center;
+  position: relative;
+  top: -25px;
+  left: 80px;
+  margin: 0px;
 }
 
 /*  travellor details input tag css */
 .container {
-  width: 30%;
+  display: none;
+  width: 40%;
   margin: auto;
-  padding: 20px;
+  padding: 10px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 50px;
-  height: 800px;
+  /* height: 500px; */
+  /* border: 10px solid yellow; */
+
 }
 
 
@@ -255,14 +347,16 @@ input[type="submit"]:hover {
 
 /* billing details input css */
 .billing-container {
-  width: 30%;
-  margin: auto;
-  padding: 20px;
+  width: 40%;
+  margin: 0px auto 10px auto;
+  padding: 10px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 50px;
+  display: none;
   /* height: 700px; */
+  /* border: 10px solid blue; */
 }
 
 .billing-title {
@@ -299,62 +393,206 @@ input[type="submit"]:hover {
   background-color: #45a049;
 }
 
-.paymentpagealldetails{
+.paymentpagealldetails {
   display: flex;
   /* border: 2px solid red; */
-  margin-bottom: 150px;
-
+  width: 80%;
+  margin: 40px auto 40px auto;
+  justify-content: space-around;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: rgb(255, 255, 255);
 }
-@media (max-width:850px){
-  .paymentpagealldetails{
-    display: flex;
-    flex-direction: column;
-    /* border: 2px solid red; */
-    margin-bottom: 150px;
-  
-  }
-  .continentcard{
-    /* border: 2px solid red; */
-    width: 350px;
-    /* text-align: center; */
-   border-radius: 25px;
-   height: 400px;
-   margin: auto;
-   background-color: rgb(227, 255, 245);
-   }
-  .container {
-    width: 30%;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
-    height: 800px;
-    width: 70%;
-  }
 
-  .billing-container {
-    width: 30%;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
-    /* height: 700px; */
-    width: 70%;
-  }
+/* all 3 container details */
+.dmaincontainer {
+  display: flex;
+  border: 4px solid rgb(0, 0, 0);
+  width: 80%;
+  margin: auto;
 }
+
+.payment-container {
+  border: 5px solid green;
+  width: 30%;
+  /* max-height: 680px; */
+  /* margin: auto; */
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+  /* height: 1000px; */
+}
+
+
+
+
 
 /* billing checkbox css
  */
- .billing-checkbox {
+.billing-checkbox {
   margin-bottom: 15px;
   color: #555;
 }
 
 
+/* /////////////////////////// */
+/* payment from page css */
+
+
+.payment-container {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 8px;
+  display: none;
+  width: 40%;
+  background-color: #fff;
+  margin: 20px auto 20px auto;
+  border: none;
+}
+
+.payment-form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+  color: #333;
+}
+
+.payment-input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 6px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.payment-submit {
+  width: 100%;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.payment-submit:hover {
+  background-color: #45a049;
+}
+
+/* ///////////receipt css */
+.payment_and_receipt {
+  /* border: 5px solid rgb(4, 4, 4); */
+  width: 80%;
+  max-height: 820px;
+  margin: 0px auto 30px auto;
+
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  /* justify-content: space-evenly; */
+
+}
+
+.paymentreceipt {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  max-width: 400px;
+  width: 40%;
+  height: 550px;
+  /* background-color: red; */
+  display: none;
+  background-color: #fff;
+  margin: auto;
+
+}
+
+.payment-receipt:hover {
+  transform: scale(1.05);
+}
+
+.title {
+  text-align: center;
+  color: #333;
+}
+
+.receipt-section {
+  margin-top: 20px;
+}
+
+.receipt-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.total-amount {
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 20px;
+  text-align: right;
+}
+
+.thank-you-message {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 18px;
+  color: #555;
+}
+
+.payment-method-logo {
+  max-width: 50px;
+  height: auto;
+}
+
+.payment-method-details {
+  display: flex;
+  align-items: center;
+}
+
+.billing-address-section {
+  margin-top: 20px;
+  border-top: 1px solid #ccc;
+  padding-top: 20px;
+}
+
+.travel-details-section {
+  margin-top: 20px;
+  border-top: 1px solid #ccc;
+  padding-top: 20px;
+}
+#billsubmit{
+  /* margin-top: 140px; */
+  background-color: rgb(252, 101, 54);
+  color: white;
+  border: none;
+  border-radius: 14px;
+  height: 50px;
+  width: 109px;
+  font-size: 18px;
+  font-weight:500;
+}
+#billsubmit:hover{
+  color: red;
+  background-color: white;
+  border: 1px solid red;
+}
 
 
 /* /////////////////////////////// */
@@ -377,24 +615,27 @@ input[type="submit"]:hover {
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
-.Ncontent-Footer > div {
+
+.Ncontent-Footer>div {
   display: flex;
   flex-direction: column;
   margin-top: 80px;
   gap: 30px;
 }
 
-.Ncontent-Footer > :nth-child(2),
-.Ncontent-Footer > :nth-child(3) {
+.Ncontent-Footer> :nth-child(2),
+.Ncontent-Footer> :nth-child(3) {
   margin-left: 80px;
 }
 
-.Ncontent-Footer > :nth-child(4) {
+.Ncontent-Footer> :nth-child(4) {
   margin-left: 150px;
 }
+
 .Ncontent-Footer p {
   margin: 0px;
 }
+
 #Nmargin-for-this {
   margin-top: 42px;
 }
@@ -406,6 +647,7 @@ input[type="submit"]:hover {
   font-size: 18px;
   font-family: Poppins;
 }
+
 .Nfooter-Grey {
   color: rgb(159, 156, 156);
   text-decoration: none;
@@ -418,6 +660,7 @@ input[type="submit"]:hover {
   gap: 20px;
   margin-top: -10px;
 }
+
 .Nfacebookimg {
   width: 25px;
   height: 35px;
@@ -432,6 +675,7 @@ input[type="submit"]:hover {
   width: 25px;
   height: 35px;
 }
+
 .Nline-div {
   display: flex;
   flex-direction: column;
@@ -448,6 +692,7 @@ input[type="submit"]:hover {
   border-radius: 10px;
   background-color: rgb(159, 156, 156);
 }
+
 .Nafter-line {
   display: flex;
   justify-content: space-between;
@@ -455,6 +700,7 @@ input[type="submit"]:hover {
   margin-top: 10px;
   align-items: center;
 }
+
 .Nfooter-Grey2 {
   color: rgb(159, 156, 156);
   text-decoration: none;
@@ -464,68 +710,190 @@ input[type="submit"]:hover {
 
 /* ------------------------For-Responsiveness-Queries--------------------------- */
 
-@media screen and (min-width: 450px) and (max-width: 675px){
-  #Sh-alignCont{
-      height: 15vh;
+@media screen and (min-width: 450px) and (max-width: 675px) {
+  #Sh-alignCont {
+    height: 15vh;
   }
-  nav{
-      width: 90%;
+
+  nav {
+    width: 90%;
   }
-  #Sh-logoCont > a > img{
-      width: 100%;
+
+  #Sh-logoCont>a>img {
+    width: 100%;
   }
-  #Sh-pageLinksCont, #Sh-navBtnCont{
-      display: none;
+
+  #Sh-pageLinksCont,
+  #Sh-navBtnCont {
+    display: none;
   }
+
   /* /////////////////////////dropdown menu CSS////////////////////////////////// */
 
-  .dropdown{
-      width: 85%;
-      margin-top: 0;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-  } 
+  .dropdown {
+    width: 85%;
+    margin-top: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 
   .show {
-      display: block; /* Use !important to override inline styles */
-      top: 10vh;
-      position: absolute;
+    display: block;
+    /* Use !important to override inline styles */
+    top: 10vh;
+    position: absolute;
   }
-  
-    /* footer css -----------------------------------------*/
 
-    .Nabout-Footer {
-      height: 40vh;
-    }
-    
-    .Ncontent-Footer {
-      height: 90%;
-      width: 90%;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2%;
-    }
-    .Ncontent-Footer > div {
-      margin-top: 0;
-      padding-top: 5%;
-      letter-spacing: 1px;
-    }
-    
-    .Ncontent-Footer > :nth-child(2),
-    .Ncontent-Footer > :nth-child(3) {
-      margin-left: 0;
-    }
-    
-    .Ncontent-Footer > :nth-child(4) {
-      margin-left: 0;
-    }
-    #Nline-footer {
-      width: 90%;
-    }
-    .Nafter-line {
-      width: 90%;
-    }
-    .Nfooter-Grey2 {
-      font-size: 15px;
-    }
+  /* footer css -----------------------------------------*/
+
+  .Nabout-Footer {
+    height: 40vh;
+  }
+
+  .Ncontent-Footer {
+    height: 90%;
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+  }
+
+  .Ncontent-Footer>div {
+    margin-top: 0;
+    padding-top: 5%;
+    letter-spacing: 1px;
+  }
+
+  .Ncontent-Footer> :nth-child(2),
+  .Ncontent-Footer> :nth-child(3) {
+    margin-left: 0;
+  }
+
+  .Ncontent-Footer> :nth-child(4) {
+    margin-left: 0;
+  }
+
+  #Nline-footer {
+    width: 90%;
+  }
+
+  .Nafter-line {
+    width: 90%;
+  }
+
+  .Nfooter-Grey2 {
+    font-size: 15px;
+  }
+}
+
+
+
+/* for payment part css self */
+@media (max-width:850px) {
+  .paymentpagealldetails {
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 150px;
+
+  }
+
+
+
+  #siglecard {
+    margin: auto;
+    display: block;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid red; */
+    justify-content: space-around;
+    height: 840px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   border-radius: 20px;
+   
+  }
+
+  .continentcard {
+    /* border: 2px solid red; */
+    width: 87%;
+    /* text-align: center; */
+    border-radius: 25px;
+    height: 400px;
+    margin: 50px 0px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 30px auto 0px auto;
+  }
+
+  .overview {
+    /* border: 2px solid red; */
+    width: 80%;
+    /* text-align: center; */
+    border-radius: 25px;
+    height: 350px;
+    margin: 50px 0px;
+    /* background-color: rgb(227, 255, 245); */
+    background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    margin: auto;
+  }
+
+  .container {
+    display: none;
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 50px;
+    /* height: 500px; */
+    /* border: 10px solid yellow; */
+
+  }
+
+  .billing-container {
+    width: 80%;
+    margin: 0px auto 40px auto;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 50px;
+    display: none;
+    /* height: 700px; */
+    /* border: 10px solid blue; */
+  }
+
+  .payment_and_receipt {
+    /* border: 5px solid rgb(4, 4, 4); */
+    width: 80%;
+    height: 860px;
+    margin: -150px auto 30px auto;
+
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+    display: none;
+
+  }
+
+  .payment-container {
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 8px;
+    display: none;
+    width: 80%;
+    background-color: #fff;
+    margin: auto;
+  }
+
+
 }
