--- a/Blog.css
+++ b/Blog.css
@@ -7,7 +7,7 @@
 header{
   width: 100%;
   height: 120vh;
-  background-image: url("./Blogs/world.jpg");
+  background-image: url("./Blogs/Images.jpg");
   background-size: cover;
 }
 #Sh-fadeCont{
@@ -400,9 +400,9 @@ nav > div{
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   }
   .booknow:hover{
-    color: rgb(17, 17, 88);
-    background-color: white;
-    border: 2px solid rgb(17, 17, 88);
+    color: rgb(6, 6, 19);
+    background-color: rgb(94, 92, 231);
+    border: 1px solid rgb(17, 88, 23);
   }
 
   #btnContainer{
@@ -653,6 +653,7 @@ background-color: black;
 
 
   @media screen and (min-width: 450px) and (max-width: 675px){ 
+  
    header{
       width: 100vw;
       height: 70vh;
