--- a/About.css
+++ b/About.css
@@ -8,21 +8,16 @@ body {
 /* <!--nishant - uppermost conatiner --> */
 header {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   background-image: url("./Aboutimages/singaporefinal.webp");
   background-size: cover;
 }
-#NfadeCont {
-  background-color: rgb(71, 47, 37);
-  width: 100%;
-  height: 100%;
-  opacity: 0.3;
-}
 #NalignCont {
-  height: 20vh;
+  height: 15vh;
   width: 100%;
   top: 0;
-  position: absolute;
+  background-color: black;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,8 +136,6 @@ nav > div {
 #headerAlignCont {
   width: 100%;
   height: 90vh;
-  top: 20vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -226,8 +219,6 @@ a:hover {
 .NalignContainer {
   width: 100%;
   height: 20vh;
-  top: 110vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   border-radius: 20px;
@@ -300,9 +291,9 @@ a:hover {
   justify-content: center;
 }
 #Noverlap1stCont {
+  height: 30vh;
   top: 130vh;
   position: absolute;
-  height: 30vh;
   width: 80%;
   font-family: Poppins;
   display: flex;
@@ -420,7 +411,6 @@ a:hover {
   background-image: url("./Aboutimages/background3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
