--- a/Blog.css
+++ b/Blog.css
@@ -4,7 +4,7 @@ body {
 }
 header {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   background-image: url("./Blogs/world.jpg");
   background-size: cover;
 }
@@ -15,10 +15,11 @@ header {
   opacity: 0.3;
 }
 #Sh-alignCont {
-  height: 20vh;
+  height: 15vh;
   width: 100%;
   top: 0;
-  position: absolute;
+  background-color: black;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,8 +146,6 @@ a:hover {
 #headerAlignCont {
   width: 100%;
   height: 90vh;
-  top: 20vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -224,8 +223,6 @@ a:hover {
 .Sh-alignContainer {
   width: 100%;
   height: 20vh;
-  top: 110vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   border-radius: 20px;
@@ -458,7 +455,6 @@ a:hover {
   background-image: url("./Aboutimages/background3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
