--- a/Home.css
+++ b/Home.css
@@ -8,22 +8,17 @@ body {
 }
 header {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   background-image: url("./home-images/headerBackGroundImg.jpg");
   background-size: cover;
 }
-#Sh-fadeCont {
-  background-color: rgb(71, 47, 37);
-  width: 100%;
-  height: 100%;
-  opacity: 0.3;
-}
 #Sh-alignCont {
-  height: 20vh;
+  height: 15vh;
   width: 100%;
-  top: 0;
-  position: absolute;
   display: flex;
+  top: 0;
+  background-color: black;
+  position: sticky;
   justify-content: center;
   align-items: center;
 }
@@ -149,8 +144,6 @@ a:hover {
 #headerAlignCont {
   width: 100%;
   height: 90vh;
-  top: 20vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -228,8 +221,6 @@ a:hover {
 .Sh-alignContainer {
   width: 100%;
   height: 20vh;
-  top: 110vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   border-radius: 20px;
@@ -335,7 +326,7 @@ a:hover {
     height: 90%;
     padding: 2% 0;
     border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(26, 23, 23, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -386,7 +377,7 @@ a:hover {
     border-radius: 10px;
 }
 .placeDetailCont{
-    height: 47%;
+    height: 52%;
     width: 100%;
     text-align: center;
     letter-spacing: 1px;
@@ -397,16 +388,18 @@ a:hover {
 .placeDetailCont > p{
     font-size: smaller;
 }
-.priceAndBtnCont, .timeAndDateCont{
+.timeAndDateCont{
+    height: 5%;
+    width: 100%;
+    text-align: center;
+    color: orangered;
+    font-size: smaller;
+}
+.priceAndBtnCont{
     width: 100%;
     height: 10%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-}
-.timeAndDateCont > div{
-    text-align: center;
-    color: orangered;
-    font-size: small;
 }
 .priceAndBtnCont > div{
     font-size: 20px;
@@ -865,7 +858,6 @@ a:hover {
   background-image: url("./Aboutimages/background3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
