--- a/login.css
+++ b/login.css
@@ -7,7 +7,7 @@ body {
   height: 20vh;
   width: 100%;
   top: 0;
-  position: absolute;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
