--- a/signup.css
+++ b/signup.css
@@ -8,6 +8,8 @@ body {
   width: 100%;
   top: 0;
   display: flex;
+  position: sticky;
+  top: 0;
   justify-content: center;
   align-items: center;
   background-color: black;
