read more btn position property deleted

--- a/Home.css
+++ b/Home.css
@@ -420,9 +420,6 @@ a:hover {
     border: 2px solid rgb(17, 17, 88);
   }
 
-
-
-
 /* ------------------partner Section---------------- */
 
 .Sh-alignCont5 {
@@ -673,8 +670,8 @@ a:hover {
   padding: 12px;
   border: none;
   border-radius: 10px;
-  position: relative;
-  top: -20px;
+  /* position: relative; */
+  /* top: -20px; */
   cursor: pointer;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
