--- a/Blog.css
+++ b/Blog.css
@@ -367,7 +367,7 @@ a:hover {
 }
 .subdiv > img {
   width: 100%;
-  height: 42%;
+  height: 40%;
   border-radius: 25px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -379,8 +379,8 @@ a:hover {
   padding: 12px;
   border: none;
   border-radius: 10px;
-  position: relative;
-  top: -20px;
+  /* position: relative; */
+  /* top: -20px; */
   cursor: pointer;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
